# hot

./: .gitignore  .merlin  Makefile.in  README.md  TODO  aclocal.m4  config.h.in  configure.ac
m4/: ocaml.m4
src/: META.in  Makefile.in  create-mli.sh  hotCARTA.ml  hotCARTA.mli  hotCPDA.mli  hotExtBatSet.ml  hotExtBatSet.mli  hotHORS.ml  hotHORS.mli  hotHelper.ml  hotInterfaces.mli  hotNBA.ml  hotPDA.mli  hotPMRS.ml  hotPMRS.mli  hotPath.ml  hotPath.mli  hotRankedAlphabet.ml  hotRankedAlphabet.mli  hotSimple.ml  hotSimple.mli  hotStack.mli  hotState.ml  hotState.mli  hotStateSet.ml  hotStateSet.mli  hotTerm.ml  hotTerm.mli  hotTransition.ml  hotTransition.mli  hotTreeAutomaton.ml  hotTreeAutomaton.mli  hotType.ml  hotType.mli  hotTypes.ml  hotTypes.mli  hotWPMRS.mli  scratch.md
test/: Makefile.in  bisect.sh  test.ml  testHotCARTA.ml  testHotExtBatSet.ml  testHotHORS.ml  testHotPath.ml  testHotRankedAlphabet.ml  testHotTerm.ml  testHotType.ml  testHotTypes.ml  testMain.ml
